Set z-index of dialog to 200, keeping it on top of things in the browse page. Fixes #256

--- a/apparelrow/media/src/partials/_filter.sass
+++ b/apparelrow/media/src/partials/_filter.sass
@@ -48,7 +48,7 @@
       position: absolute
       left: $aside_width
       top: 0px
-      z-index: 10
+      z-index: 200
       .arrow
         position: absolute
         top: $n * 30px
